fixed warnings and cleaned Lombok annotations usage